<resources>
    <string name="app_name">Presentation Evalution</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="department_of_computer_science">Department Of Computer Science</string>
    <string name="member_of_acedemic_examiners_bord">Member of acedemic examiners bord:</string>
    <string name="gender_of_member">Gender Of Member:</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="evaluation_of_oral_presentations_of">Evaluation of Oral Presentations of:</string>
    <string name="form_comunition_faculy">Form Comunition faculy</string>
    <string name="clarity_of_presentation_outline">Clarity Of presentation outline</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="respect_of_given_time_time_management_rhythm_of_presentation">Respect of given time – Time management, rhythm of presentation</string>
    <string name="language">Language accuracy, Pronunciation, Speed control</string>
    <string name="preparation">Preparation works – Visual aid (screen, projector,...)</string>
    <string name="interest">Interest, effort of persuasion</string>
    <string name="content">Content, Technical aspect</string>
    <string name="choice_topic">Choice and topic of oral presentation</string>
    <string name="relevancy_of_comment_and_technical_explanation">Relevancy of comment and technical explanation</string>
    <string name="progress_pf_reasoning">Progress pf reasoning</string>
    <string name="answer_to_questions">Answer to questions</string>
    <string name="commment_here">Commment here</string>
    <string name="submite_now">Submite Now</string>
    <string name="BANNER">banner</string>
    <string name="CAMBODIA">cambodia</string>
    <string name="CS">string</string>
    <string name="Member_board">bord</string>
    <string name="data_from_member">data</string>
    <string name="gender">gender</string>
    <string name="data_from_gender">dataf</string>
    <string name="Evaluate_present">evlation</string>
    <string name="data_from_evaluation">elu</string>
    <string name="Form_faculty">formf</string>
    <string name="Clari_outline">clariout</string>
    <string name="data_from_Clarity">dclari</string>
    <string name="Respect_time">retime</string>
    <string name="data_from_Respect">derespect</string>
    <string name="Language">lang</string>
    <string name="data_from_Language">dataform</string>
    <string name="datafrom_pre">data_from_Preparation</string>
    <string name="data_from_interest">data_from_Interest</string>
    <string name="datachhoise">data_from_choice</string>
    <string name="revenacy">relevancy</string>
    <string name="reverancy">data_from_Relevancy</string>
    <string name="prsess">progress</string>
    <string name="dataprocess">data_from_Progress</string>
    <string name="answer">Answer</string>
    <string name="datananswer">data_from_Answer</string>
    <string name="cmt">CMT</string>
    <string name="datafromcmt">data_from_Comment</string>
</resources>